# AgentVerse-CrewAI-Tamil-Meme

./: .env.example  .gitignore  API_CONTRACT.md  CLAUDE.md  EPISODES.md  README.md  SESSION.md  SETUP.md  architecture.md  pyproject.toml
src/social_impact_crew/: api.py  crew.py  intent.py  llm.py  main.py  personality.py  preferences.py  safety.py
src/social_impact_crew/config/: agents.yaml  tasks.yaml
src/social_impact_crew/tools/: __init__.py  custom_tool.py
