[project]
name = "social_impact_crew"
version = "0.1.0"
description = "AgentVerse Episode: CrewAI + Weather + Pollution + Tamil Meme Writer"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Sasi", email = "sasistartup@gmail.com" }]
dependencies = [
    "crewai[tools]>=0.80.0",
    # litellm is required for Groq (CrewAI 1.x ships native support only for
    # openai/anthropic/gemini/deepseek/ollama/cerebras/dashscope/etc.)
    "litellm>=1.50.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    # API server for the AgentVerse frontend.
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # OpenLIT auto-instruments LLM + HTTP calls (one-liner observability).
    "openlit>=1.30.0",
]

[project.scripts]
run_crew = "social_impact_crew.main:run"
run_api = "social_impact_crew.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/social_impact_crew"]
